# AssppWeb

./: AGENTS.md  compose.yml  package-lock.json
backend/: package-lock.json
backend-rs/: Cargo.toml
backend-rs/crates/asspp-core/: Cargo.toml
backend-rs/crates/asspp-core/src/: bag.rs  download.rs  lib.rs  manifest.rs  plist_util.rs  search.rs  security.rs  sinf.rs  types.rs  wisp.rs
backend-rs/crates/asspp-worker/src/routes/: downloads.rs  install.rs  mod.rs  packages.rs
backend-rs/crates/asspp-worker/src/services/: download_manager.rs
backend/src/: config.ts  index.ts
backend/src/routes/: auth.ts  downloads.ts  search.ts  settings.ts  signing.ts
backend/src/services/: anisetteAssets.ts  chunkedDownloader.ts  downloadManager.ts  wsProxy.ts
backend/tests/: routes.test.ts  wsProxy.test.ts
cloudflare/: Dockerfile  README.md  wrangler.jsonc
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/api/: signing.ts
frontend/src/apple/: altSignClient.ts  anisetteService.ts  auth.ts  authenticate.ts  developerApi.ts  developerTypes.ts  download.ts  ipaInfo.ts  libcurl-http.ts  libcurl-init.ts  purchase.ts
frontend/src/components/Account/: AccountDetail.tsx  AccountList.tsx  AddAccountForm.tsx
frontend/src/components/Auth/: PasswordGate.tsx
frontend/src/hooks/: useDownloadAction.ts
frontend/src/locales/: en-US.json  en.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json  zh.json
frontend/src/store/: toast.ts
frontend/src/stores/: signingStore.ts
frontend/src/utils/: account.ts
(+25 files in other folders)
