[workspace]
resolver = "2"
members = ["crates/asspp-core"]
exclude = ["crates/asspp-worker"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
plist = "1"
