[package]
name = "asspp-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
plist = { workspace = true }
url = "2"
urlencoding = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
